--- a/responsive-dev-path/404-not-found-master/style.css
+++ b/responsive-dev-path/404-not-found-master/style.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     align-items: center;
     padding-left: 2em;
-    font-size: 24px;
+    font-size: clamp(1rem, 0.7792rem + 1.0092vw, 1.6875rem);
     font-family: 'Inconsolata';
 }
 
@@ -29,19 +29,22 @@ body {
     width: 40%;
 }
 
+img{
+    margin-right: 2em;
+}
 
 h1 {
-    font-size: 64px;
+    font-size: clamp(2rem, 1.3578rem + 2.9358vw, 4rem);
     font-weight: 700;
-    line-height: 94.78px;
     letter-spacing: -0.035em;
+    line-height: 1.5em;
 }
 
 p {
-    font-size: 24px;
+    font-size: clamp(1rem, 0.7792rem + 1.0092vw, 1.6875rem);
     font-weight: 400;
-    line-height: 35.54px;
     letter-spacing: -0.035em;
+    line-height: 2em;
 }
 
 button {
@@ -55,13 +58,14 @@ button {
 }
 
 .attribution {
-    height: 150px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: end;
+    padding-top: 130px;
+}
+
+.attribution p{
     color: #BDBDBD;
     font-family: 'Montserrat';
+    font-size: 16px;
+    text-align: center;
 }
 
 @media only screen and (max-width: 800px) {
@@ -69,6 +73,6 @@ button {
         flex-direction: column;
     }
     .container > *{
-        width: 100%;
+        width: 80%;
     }
 }
